--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
       - name: Load and Cache dependencies
-        uses: ./.github/actions/cached-deps
+        uses: ./.github/actions/cached-deps/action.yml
       - name: Lint code
         run: npm run lint
   test:
